@@ -1,4 +1,5 @@
 xine-lib (1.1.17) 2009-??-??
+  * Fix build with older ffmpeg, both internal and in Debian 5.0.
 
 xine-lib (1.1.16) 2009-01-07
   * Security fixes:
